--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,14 @@
 
 # BlueJ files
 *.ctxt
+.DS_Store
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+.classpath
+.project
+bin/
 
 # Package Files #
 *.jar
