--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,16 @@ hs_err_pid*
 # Generated files
 .idea/**/contentModel.xml
 
+# JavaCC files
+src/jminusminus/JavaCCMain.java
+src/jminusminus/JavaCCParser.java
+src/jminusminus/JavaCCParserConstants.java
+src/jminusminus/JavaCCParserTokenManager.java
+src/jminusminus/ParseException.java
+src/jminusminus/SimpleCharStream.java
+src/jminusminus/Token.java
+src/jminusminus/TokenMgrError.java
+
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
