modified build file, so you can compile all the pass tests seperataly and run a single file with Main or JavaCCMain

--- a/build.xml
+++ b/build.xml
@@ -57,7 +57,7 @@
 	 JavaCC frontend.
     -->
 
-    <target name="runJavaCCFile">
+    <target name="runJavaCCFile" depends="clean,javacc,compileJavaCC">
         <java classname="jminusminus/JavaCCMain"
               dir="classes"
               fork="true">
