--- a/build.xml
+++ b/build.xml
@@ -62,7 +62,7 @@
               dir="classes"
               fork="true">
               <arg value="-t"/> <!-- Change the argument -->
-              <arg value="../tests/pass/Division.java"/> <!-- Change the Division to other file name -->
+              <arg value="../tests/pass/Conditional.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
