--- a/build.xml
+++ b/build.xml
@@ -58,15 +58,22 @@
     -->
 
     <target name="runJavaCCFile" depends="clean,javacc,compileJavaCC">
-        <java classname="jminusminus.JavaCCMain"
-              dir="${CLASS_DIR}"
+        <java classname="jminusminus/JavaCCMain"
+              dir="classes"
               fork="true">
-              <arg value="-t"/> <!-- Change the argument -->
-              <arg value="../tests/pass/Conditional.java"/> <!-- Change the Division to other file name -->
+              <arg value="-p"/> <!-- Change the argument -->
+              <arg value="../tests/pass/Division.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
-    <target name="clean,javacc,compileJavaCC" depends="clean,javacc,compileJavaCC"/>
+    <target name="runNormalFile" depends="clean,compile">
+        <java classname="jminusminus/Main"
+              dir="classes"
+              fork="true">
+              <arg value="-p"/> <!-- Change the argument -->
+              <arg value="../tests/pass/MultAssign.java"/> <!-- Change the Division to other file name -->
+        </java>
+    </target>
 
     <target name="compileJavaCC">
         <echo message="Compiling j-- source files..."/>
