--- a/build.xml
+++ b/build.xml
@@ -71,7 +71,7 @@
               dir="classes"
               fork="true">
               <arg value="-p"/> <!-- Change the argument -->
-              <arg value="../tests/pass/ForLoop.java"/> <!-- Change the Division to other file name -->
+              <arg value="../tests/pass/Conditional.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
