double return type not working

--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,9 @@
 // Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas
 -->
 
-<project default="runCompilerTests">
-
+<!-- <project default="runCompilerTests">
+-->
+<project>
     <property name="APP_FULL_NAME" value="j-- (A Non-trivial Subset of Java)" />
     <property name="SRC_DIR" value="src" />
     <property name="CLASS_DIR" value="classes" />
