Fixed errors with running tests Now runCompilerTests does not run JavaCC tests

--- a/build.xml
+++ b/build.xml
@@ -219,21 +219,21 @@
                 <formatter type="plain" usefile="false"/>
             </test>
         </junit>
-        <javac srcdir="${basedir}/tests"
+        <!--<javac srcdir="${basedir}/tests"
                sourcepath=""
                destdir="${CLASS_DIR}"
                includes="junit/**"
                excludes="junit/JavaCCScannerTest.java,junit/JavaCCParserTest.java,junit/JMinusMinusTestJavaCC.java"
 	       includeantruntime="false"
 	       debug="on">
-            <!-- Uncomment the following to see compiler warnings. -->
-            <!-- <compilerarg value="-Xlint" />                    -->
+            &lt;!&ndash; Uncomment the following to see compiler warnings. &ndash;&gt;
+            &lt;!&ndash; <compilerarg value="-Xlint" />                    &ndash;&gt;
             <classpath>
                 <pathelement location="${LIB_DIR}/junit.jar" />
                 <pathelement location="${basedir}/${CLASS_DIR}" />
             </classpath>
-        </javac>
-        <junit printsummary="yes" haltonfailure="no" showoutput="yes">
+        </javac>-->
+        <!--<junit printsummary="yes" haltonfailure="no" showoutput="yes">
             <classpath>
                 <pathelement location="${LIB_DIR}/junit.jar" />
                 <pathelement location="${basedir}/${CLASS_DIR}" />
@@ -242,7 +242,7 @@
                   haltonfailure="no">
                 <formatter type="plain" usefile="false"/>
             </test>
-        </junit>
+        </junit>-->
     </target>
 
     <!--
