--- a/build.xml
+++ b/build.xml
@@ -81,7 +81,7 @@
               dir="classes"
               fork="true">
               <arg value="-p"/> <!-- Change the argument -->
-              <arg value="../tests/pass/tests_only_for_scanner/ShiftRight.java"/> <!-- Change the Division to other file name -->
+              <arg value="../tests/pass/Block.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
