--- a/build.xml
+++ b/build.xml
@@ -71,7 +71,7 @@
         <java classname="jminusminus/Main"
               dir="classes"
               fork="true">
-            <arg value="-a"/> <!-- Change the argument -->
+            <arg value="-pa"/> <!-- Change the argument -->
             <arg value="../tests/pass/ForStatements.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
