--- a/build.xml
+++ b/build.xml
@@ -80,7 +80,7 @@
         <java classname="jminusminus/Main"
               dir="classes"
               fork="true">
-              <arg value="-a"/> <!-- Change the argument -->
+<!--              <arg value="-a"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
               <arg value="../tests/pass/ForStatements.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
