--- a/build.xml
+++ b/build.xml
@@ -80,8 +80,8 @@
         <java classname="jminusminus/Main"
               dir="classes"
               fork="true">
-<!--              <arg value="-a"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
-              <arg value="../tests/pass/ExceptionHandling.java"/> <!-- Change the Division to other file name -->
+<!--              <arg value="-t"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
+              <arg value="../tests/pass/Division.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
