Updated throws types of method to be arraylist of type "Type" instead of "TypeName"

--- a/build.xml
+++ b/build.xml
@@ -81,7 +81,7 @@
               dir="classes"
               fork="true">
 
-              <arg value="-a"/> <!-- Change the argument -->
+<!--              <arg value="-a"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
               <arg value="../tests/pass/ExceptionHandling.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
