--- a/build.xml
+++ b/build.xml
@@ -62,8 +62,8 @@
         <java classname="jminusminus/JavaCCMain"
               dir="classes"
               fork="true">
-              <arg value="-p"/> <!-- Change the argument -->
-              <arg value="../tests/pass/Division.java"/> <!-- Change the Division to other file name -->
+<!--              <arg value="-p"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
+              <arg value="../tests/pass/MultilineComment.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
@@ -80,9 +80,8 @@
         <java classname="jminusminus/Main"
               dir="classes"
               fork="true">
-
-<!--              <arg value="-a"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
-              <arg value="../tests/pass/ExceptionHandling.java"/> <!-- Change the Division to other file name -->
+              <arg value="-p"/> <!-- Change the argument -->
+              <arg value="../tests/pass/PlusAssign.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
