--- a/build.xml
+++ b/build.xml
@@ -81,8 +81,8 @@
               dir="classes"
               fork="true">
 
-<!--              <arg value="-a"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
-              <arg value="../tests/pass/ExceptionHandling.java"/> <!-- Change the Division to other file name -->
+              <arg value="-p"/> <!-- Change the argument -->
+              <arg value="../tests/pass/Division.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
