added specific test case from the report to conditional

--- a/build.xml
+++ b/build.xml
@@ -81,7 +81,7 @@
               dir="classes"
               fork="true">
 <!--              <arg value="-p"/> &lt;!&ndash; Change the argument &ndash;&gt;-->
-              <arg value="../tests/pass/Block.java"/> <!-- Change the Division to other file name -->
+              <arg value="../tests/pass/Conditional.java"/> <!-- Change the Division to other file name -->
         </java>
     </target>
 
